    main/He/Mansfield.yml: comments, info
    main/Ar/Bideau-Mehu.yml: references, range, comments, info
    main/Ne/Bideau-Mehu.yml: references, range, comments, info
    main/Kr/Bideau-Mehu.yml: references, range, comments, info
    main/Xe/Bideau-Mehu.yml: references, range, comments, info
    main/CO2/Bideau-Mehu.yml: comments, info
    other/mixed gases/air/Ciddor.yml: comments
  bug fixes
    library.yml: fixed "HIKARI-KF" book wrongly named "HIKARI-FK"

2016-05-25
  bug fixes (thanks to Julian Stark, Institut für Lasertechnologien in der Medizin und Messtechnik, Ulm, Germany!)
    main/Pb/Golovashkin-293.yml - fixed a bug in numerical data
  bug fixes (thanks to Thibault North!) - fixed glass INFO and comments wrongly imported from Zemax catalog
    glass/schott/P-LASF50.yml
    glass/schott/P-SF69.yml
    glass/schott/P-SK58A.yml
    glass/schott/P-LAF37.yml
    glass/schott/inquiry/N-LAF32.yml
    glass/schott/obsolete/SF66.yml
  bug fixes (thanks to Karsten Pufahl, Technische Universität Berlin, Germany!) - missing dispersion formula
    glass/schott/inquiry/N-LAF32.yml
    glass/schott/obsolete/LITHOSIL-Q.yml
    glass/schott/obsolete/N-LASF31.yml
    glass/schott/obsolete/N-LASF46.yml
  new data (thanks to Valkai Sándor, Biological Research Centre, Szeged, Hungary!)
    other/resists/Micro resist EpoCore.yml
    other/resists/Micro resist Epolad.yml
    other/optical adhesives/Norland NOA 61.yml
  new data (thanks to David Rioux, Polytechnique Montreal, Canada, for providing data in yaml format!)
    other/alloys/Au-Ag/Rioux-Au100Ag0.yml
    other/alloys/Au-Ag/Rioux-Au90Ag10.yml
    other/alloys/Au-Ag/Rioux-Au80Ag20.yml
    other/alloys/Au-Ag/Rioux-Au70Ag30.yml
    other/alloys/Au-Ag/Rioux-Au60Ag40.yml
    other/alloys/Au-Ag/Rioux-Au50Ag50.yml
    other/alloys/Au-Ag/Rioux-Au40Ag60.yml
    other/alloys/Au-Ag/Rioux-Au30Ag70.yml
    other/alloys/Au-Ag/Rioux-Au20Ag80.yml
    other/alloys/Au-Ag/Rioux-Au10Ag90.yml
    other/alloys/Au-Ag/Rioux-Au0Ag100.yml