@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "A. C. Sinnock and B. L. Smith. Refractive indices of the condensed inert gases, <a href=\"https://doi.org/10.1103/PhysRev.181.1297\"><i>Phys. Rev.</i> <b>181</b>, 1297-1307 (1969)</a>"
-COMMENTS: "Solid xenon at 161.35 K (-111.80 °C)."
+COMMENTS: "Solid xenon at 161.35 K (-111.80 °C, melting point)."
 DATA:
   - type: tabulated n
     data: |
