@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "J. V. Martonchik and G. S. Orton. Optical constants of liquid and solid methane, <a href=\"http://dx.doi.org/10.1364/AO.33.008306\"><i>Appl. Opt.</i> <b>33</b>, 8306-8317 (1994)</a>"
-COMMENTS: "Phase I solid methane at 111 K (-162.1 °C, boiling point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
+COMMENTS: "Phase I solid methane at 111 K (-162.15 °C, melting point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
 DATA:
   - type: tabulated nk
     data: |
@@ -50,3 +50,5 @@ DATA:
         8.26 1.310 1.001E-2
         41.67 1.272 6.234E-4
         71.43 1.273 1.353E-3
+INFO:
+    temperature: 111 K
