@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "J. V. Martonchik and G. S. Orton. Optical constants of liquid and solid methane, <a href=\"http://dx.doi.org/10.1364/AO.33.008306\"><i>Appl. Opt.</i> <b>33</b>, 8306-8317 (1994)</a>"
-COMMENTS: "Phase I solid methane at 90 K (-183.1 °C, melting point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
+COMMENTS: "Phase I solid methane at 90 K (-183.15 °C, melting point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
 DATA:
   - type: tabulated nk
     data: |
@@ -50,3 +50,5 @@ DATA:
         8.26 1.332 1.067E-2
         41.67 1.291 6.645E-4
         71.43 1.292 1.442E-3
+INFO:
+    temperature: 90 K
