@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "J. V. Martonchik and G. S. Orton. Optical constants of liquid and solid methane, <a href=\"http://dx.doi.org/10.1364/AO.33.008306\"><i>Appl. Opt.</i> <b>33</b>, 8306-8317 (1994)</a>"
-COMMENTS: "Phase I solid methane at 90 K (-183.1 °C, melting point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
+COMMENTS: "Phase I solid methane at 90 K (-183.15 °C, melting point)<br>CAUTION: don't rely on interpolated values: Most data points represent values at local maxima or minima"
 DATA:
   - type: tabulated nk
     data: |
@@ -48,3 +48,5 @@ DATA:
         36.36 1.316 7.624E-4
         62.50 1.317 2.636E-3
         100.00 1.318 2.387E-3
+INFO:
+    temperature: 90 K
