@@ -3,7 +3,7 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "R. Rollefson and R. Havens. Index of refraction of methane in the infra-red and the dipole moment of the CH bond, <a href=\"http://dx.doi.org/10.1103/PhysRev.57.710\"><i>Phys. Rev.</i> <b>57</b>,S 710-717 (1940)</a>"
-COMMENTS: "Gaseous methane"
+COMMENTS: "Gaseous methane at standard conditions. 0 °C, 760 torr (101.325 kPa)."
 DATA:
   - type: tabulated n
     data: |
@@ -56,3 +56,7 @@ DATA:
         13.60 1.00044370
         14.00 1.00044840
         14.80 1.00044380
+INFO:
+    n_is_absolute: true
+    temperature: 0 °C
+    pressure: 101325 Pa
